...

    <!-- Common Components -->
    <!-- Address -->
    <string name="addressField_component_testTag">AddressFieldComponent</string>
    <string name="addressField_title_testTag">TitleAddressField</string>
    <string name="addressField_value_testTag">ValueAddressField</string>
    <string name="addressForms_component_testTag">AddressFormsComponent</string>

    <!-- Date Picker -->
    <string name="datePickerField_brazilDateTimePattern_text">DD/MM/YYYY</string>
    <string name="datePickerField_component_testTag">DatePickerModalComponentTag</string>
    <string name="datePickerField_trailingIcon_description">Selecionar data</string>
    <string name="datePickerModal_component_testTag">DatePickerModal</string>
...
    <string name="fastScrollGrid_upButton_contentDescription">Mover para o início da lista</string>
    <string name="fastScrollGrid_upButton_testTag">FastScrollGridUpFabTestTag</string>
    <string name="fastScrollGrid_upButton_text">Topo</string>
    <string name="fastScrollList_component_testTag">FastScrollListComponent</string>
    <string name="fastScrollList_downButton_contentDescription">Mover para o fim da lista</string>
    <string name="fastScrollList_downButton_testTag">FastScrollListDownFabTestTag</string>
    <string name="fastScrollList_downButton_text">Fim</string>
    <string name="fastScrollList_upButton_contentDescription">Mover para o início da lista</string>
    <string name="fastScrollList_upButton_testTag">FastScrollListUpFabTestTag</string>
    <string name="fastScrollList_upButton_text">Topo</string>

    <!-- Fields -->
    <string name="cepTextField_component_testTag">AppTextFieldComponent</string>
    <string name="cepTextField_inputCounter_testTag">AppTextFieldInputCounter</string>
    <string name="cepSearchField_clearTrailingIcon">Limpar campo cep</string>
    <string name="cepSearchField_component_testTag">SearchCepFieldComponent</string>
...
    <string name="favoriteExport_message_text">Deseja exportar os registros salvos como favoritos?</string>
    <string name="favoriteExport_title_text">Exportar</string>
    <string name="favoriteImport_component_testTag">FavoriteImportComponentTestTag</string>
    <string name="favoriteImport_message_text">Deseja selecionar arquivo de backup para importar?</string>
    <string name="favoriteImport_title_text">Importar</string>
    <string name="favoriteItem_component_testTag">FavoriteItemComponentTag %1$s</string>
    <string name="favoriteTab_addressTab_label">Endereço</string>
    <string name="favoriteTab_addressTab_description">Aba de endereço</string>
    <string name="favoriteTab_noteTab_label">Anotações</string>
    <string name="favoriteTab_noteTab_description">Aba de anotações</string>
    <string name="noteContentField_component_testTag">NoteContentFieldComponentTestTag</string>
    <string name="noteContentField_nameField_text">Anotação</string>
    <string name="noteForms_component_testTag">NoteFormsComponentTestTag</string>
    <string name="noteFormsButton_component_testTag">NoteFormsButtonComponentTestTag</string>
    <string name="noteFormsButton_saveButton_text">Criar</string>
    <string name="noteFormsButton_saveButton_description">Botão para criar nota</string>
    <string name="noteFormsButton_updateButton_text">Atualizar</string>
    <string name="noteFormsButton_updateButton_description">Botão para atualizar nota</string>
    <string name="noteTitleField_component_testTag">NoteTitleFieldComponentTestTag</string>
    <string name="noteTitleField_nameField_text">Título</string>
    <string name="noteTitleField_nameField_errorMsg">O título deve conter entre %1$s e %2$s caracteres</string>

    <!-- Log List Pane component -->
    <string name="logElement_component_testTag">LogElementComponentTestTag %1$s</string>
    <string name="logElement_deleteButton_testTag">LogElementContentDeleteButtonTestTag</string>
    <string name="logElement_deleteButton_description">Botão para apagar o cep %1$s pesquisado em %2$s</string>
    <string name="logElementContent_cepField_description">Cep %1$s pesquisado</string>
    <string name="logElementContent_timestampField_description">Cep pesquisado em %1$s</string>
    <string name="logElementContent_cepField_label">CEP: %1$s</string>
    <string name="logElementContent_component_testTag">LogElementContentComponentTestTag %1$s</string>
    <string name="logFilterChip_filterSelected_description">Filtro %1$s selecionado</string>
    <string name="logFilterComponent_component_testTag">LogFilterComposable</string>
...
